--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,14 +4,13 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: api
+      dockerfile: api.Dockerfile
     ports:
       - "3000:3000"
     environment:
       NODE_ENV: development
-    # volumes:
-    #   - .:/usr/src/app
-    #   - /usr/src/app/node_modules
+    volumes:
+      - ./api/:/usr/src/api
+      # - ./api/node_modules/:/usr/src/app/node_modules
     # command: npm run start:dev
     tty: true
