--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   api:
     build:
@@ -10,7 +8,5 @@ services:
     environment:
       NODE_ENV: development
     volumes:
-      - ./api/:/usr/src/api
-      # - ./api/node_modules/:/usr/src/app/node_modules
-    # command: npm run start:dev
-    tty: true
+      - /usr/src/api/node_modules
+    command: npm run start:dev
