--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,6 @@ services:
     environment:
       NODE_ENV: development
     volumes:
+      - ./api:/usr/src/api
       - /usr/src/api/node_modules
     command: npm run start:dev
